--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -44,9 +44,10 @@
     display: table;
     border-spacing: 0;
     border-collapse: separate;
-    background-color: #cd283c;
+    background-color: #223344;
     border-radius: 3px 3px 0 0;
     -webkit-border-radius: 3px 3px 0 0;
+    border-bottom: 1px solid white;
   }
   .tail-datetime-calendar .calendar-navi span {
     cursor: pointer;
@@ -54,9 +55,9 @@
     margin: 0;
     padding: 0;
     display: table-cell;
-    font-size: 14px;
+    font-size: 22px;
     text-align: center;
-    line-height: 30px;
+    line-height: 45px;
     text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
     background-repeat: no-repeat;
     background-position: center center;
@@ -106,8 +107,8 @@
     text-align: center;
     font-weight: normal;
     line-height: 35px;
-    border: 0;
-    background-color: #223344;
+    border-bottom: 3px solid white;
+    background-color: #223344cf;
   }
   .tail-datetime-calendar .calendar-date table tbody tr > * {
       border: 0.5px solid #33445529;
@@ -142,11 +143,14 @@
     color: #3296c8;
   }
 
-  .tail-datetime-calendar .calendar-date table tbody tr > *.illegiable {
-    background-color: #cd283c75;
+  .tail-datetime-calendar .calendar-date table tbody tr > *.ineligible {
+    background-color: #b9061c;
+    color: white;
   }
   .tail-datetime-calendar .calendar-date table tbody tr > *.today:after {
     border-color: #3296c8;
+    padding-left: 40px;
+    
   }
   .tail-datetime-calendar .calendar-date table tbody tr > *:hover {
     color: #cd283c;
