--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -143,6 +143,8 @@
     color: #3296c8;
   }
 
+
+
   .tail-datetime-calendar .calendar-date table tbody tr > *.ineligible {
     background-color: grey;
     color: white;
@@ -156,11 +158,18 @@
   .tail-datetime-calendar .calendar-date table tbody tr > *.pending {
     background-color: #ffb90796;
   }
-  .tail-datetime-calendar .calendar-date table tbody tr > *.today:after {
+
+  .tail-datetime-calendar .calendar-date table tbody tr > *.ordinary {
+    background-color: white !important;
+    color: black !important;
+  }
+
+
+  /*.tail-datetime-calendar .calendar-date table tbody tr > *.today:after {
     border-color: #3296c8;
     padding-left: 40px;
     
-  }
+  }*/
   .tail-datetime-calendar .calendar-date table tbody tr > *:hover {
     color: #cd283c;
   }
