--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -11,9 +11,9 @@
 
 /* @start tail.DateTime */
 .tail-datetime-calendar {
-    width: 100%;
+    width: 97%;
     height: auto;
-    margin: 15px;
+    margin: 25px 0px;
     padding: 0;
     display: block;
     overflow: hidden;
