--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -64,7 +64,7 @@
   }
   .tail-datetime-calendar .calendar-navi span:first-child,
   .tail-datetime-calendar .calendar-navi span:last-child {
-    width: 35px;
+    width: 5px;
     padding: 0 0 5px 0;
     font-size: 22px;
   }
@@ -95,6 +95,11 @@
     border-spacing: 0;
     border-collapse: collapse;
   }
+  span.MuiBadge-colorSecondary{
+    background-color:  #880e4f;
+
+  }
+
 
 
   .tail-datetime-calendar .calendar-date table thead tr > *,
@@ -147,17 +152,18 @@
 
   .tail-datetime-calendar .calendar-date table tbody tr > *.ineligible {
     background-color: grey;
-    color: white;
+    background: linear-gradient(0deg, rgb(181, 179, 179) 0%, #cccccc, #d7d7d7 100%);
   }
 
   .tail-datetime-calendar .calendar-date table tbody tr > *.approved {
     background-color: #63d063;
-    color: white;
+    background: linear-gradient(0deg, rgb(174, 224, 174) 0%, #60c26085, #bbe5bbb8 100%);
   }
 
   .tail-datetime-calendar .calendar-date table tbody tr > *.pending {
     background-color: #ffb90796;
-  }
+    background: linear-gradient(0deg, rgba(254, 254, 127, 0.84) 0%, #fafa788c, #fefec3 100%);
+}
 
   .tail-datetime-calendar .calendar-date table tbody tr > *.ordinary {
     background-color: white !important;
