--- a/src/components/calendar-label/calendar-label.css
+++ b/src/components/calendar-label/calendar-label.css
@@ -15,3 +15,11 @@ span.approved-label {
 span.pending-label {
     background: linear-gradient(0deg, rgba(218, 218, 34, 0.59) 0%, #fdfd078c, #ffff7a26 100%);
 }
+
+span.badge-default {
+    background-color: white !important;
+}
+
+span.badge {
+    box-shadow: none ;
+}
