--- a/src/views/create-vacation-request/createVacationForm.css
+++ b/src/views/create-vacation-request/createVacationForm.css
@@ -15,3 +15,9 @@ input[type="date"] {
   input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 15px;
   }
+
+
+  input:required:valid {
+    border-width: 1px;
+    border-color: limegreen;
+  }
