title of own vacation request

--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -358,4 +358,15 @@
     color:white;
   }
 
+  p.myReqTitle {
+    margin-bottom: 0px;
+
+  }
+
+  p.myReqTitle em {
+    color: #90a4ae;
+    font-size: 10px;
+ 
+  }
+
   
