view profile button on view vacation request

--- a/src/components/view-vacation-request/viewVacationRequest.css
+++ b/src/components/view-vacation-request/viewVacationRequest.css
@@ -1,4 +1,5 @@
-.vacationRequestContent{
-    padding-top: 60px;
-}
 
+.acceptButton{
+    color: green;
+    font-family: 'Courier New', Courier, monospace;
+}
