--- a/src/views/create-vacation-request/createVacationForm.css
+++ b/src/views/create-vacation-request/createVacationForm.css
@@ -1,23 +1,48 @@
-input[type="date"] {
-    outline: none;
-  }
-  
-  input[type="date"]::-webkit-clear-button {
-    font-size: 18px;
-    height: 30px;
-    position: relative;
-  }
-  
-  input[type="date"]::-webkit-inner-spin-button {
-    height: 28px;
-  }
-  
-  input[type="date"]::-webkit-calendar-picker-indicator {
-    font-size: 15px;
-  }
-
 
   input:required:valid {
     border-width: 1px;
     border-color: limegreen;
   }
+
+  div.react-datepicker-wrapper {
+    width: 100%;
+  }
+
+  div.react-datepicker__input-container input{
+    width:100%;
+    display: block;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  }
+
+  textarea  {
+    padding: 0;
+    height:75px;
+    width:100%;
+    display: block;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  }
+
+  div.react-datepicker-popper{
+    top: 15px !important;
+  }
+
