set max vacation days

--- a/src/views/vacation-settings/vacationSettings.css
+++ b/src/views/vacation-settings/vacationSettings.css
@@ -1,3 +1,16 @@
 .settingsContent{
     padding-top: 60px;
 }
+
+
+.MuiInput-underline:before {
+    border-bottom: none !important;
+}
+
+.small-text {
+    color: #607d8b9e;
+}
+
+.MuiInput-root {
+    width:75px;
+}
