Fixed all request views for user and admin

--- a/src/components/request-list-item/request-list-item.css
+++ b/src/components/request-list-item/request-list-item.css
@@ -1,3 +1,21 @@
 .itemContent{
     background-color:whitesmoke;
 }
+
+.requestStatusPending{
+    font-style: italic;
+    color: lightgray;
+    font-size: small;
+}
+
+.requestStatusApproved{
+    color: green;
+    font-style: italic;
+    font-size: small;
+}
+
+.requestStatusDenied{
+    color: red;
+    font-style: italic;
+    font-size: small;
+}
