--- a/src/views/create-vacation-request/createVacationForm.css
+++ b/src/views/create-vacation-request/createVacationForm.css
@@ -1,7 +1,17 @@
 
   input:required:valid {
     border-width: 1px;
-    border-color: limegreen;
+    border-color: limegreen !important;
+  }
+
+  .form-control:focus {
+    border-color: #ced4da !important;
+    box-shadow: 0 0 0 0rem white !important;
+  }
+
+  .invalid {
+    border-width: 1px;
+    color: #f44336e6;
   }
 
   div.react-datepicker-wrapper {
@@ -25,11 +35,10 @@
   }
 
   textarea  {
+    height: auto;
     padding: 0;
-    height:75px;
     width:100%;
     display: block;
-    height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
